Added more info to the tck runner comments